# libdatachannel-java

./: .gitattributes  .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  index.js  renovate.json5  settings.gradle.kts
.github/workflows/: gradle.yml  publish-web.yml  readme-version.yml
.run/: Assemble.run.xml  Publish.run.xml
android/: build.gradle.kts
android/src/main/resources/: AndroidManifest.xml
arch-detect/: build.gradle.kts
arch-detect/src/main/java/tel/schich/libdatachannel/: LibDataChannelArchDetect.java
conventions/: build.gradle.kts  settings.gradle.kts
conventions/src/main/kotlin/: Constants.kt  tel.schich.libdatachannel.convention.common.gradle.kts
example/java/: build.gradle.kts  settings.gradle.kts
example/java/src/main/java/tel/schich/libdatachannel/example/: Main.java
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
jni/: CMakeLists.txt  build.sh  conanfile.py  setup-conan-profile.sh
jni/conan-profiles/: macos-arm64.ini  macos-x86_64.ini
jni/src/: bindings_mng.h  callback.c  callback.cpp  callback.h  callback.hpp  global_jvm.h  global_jvm.hpp  init.c  init.cpp  jni-c-to-java.c  native_channel.c  native_channel.cpp  native_channel.hpp  native_data_channel.cpp  native_peer.c  native_peer.cpp  native_track.c  native_track.cpp  util.c  util.cpp  util.h  util.hpp
src/main/java/tel/schich/libdatachannel/: Channel.java  DataChannel.java  DataChannelInitSettings.java  DataChannelReliability.java  EventListenerContainer.java  LibDataChannel.java  LibDataChannelNative.java  PeerConnection.java  PeerConnectionConfiguration.java  PeerConnectionListener.java  Platform.java  Track.java  Util.java
src/test/java/tel/schich/libdatachannel/: PeerConnectionTest.java
